# n8n-desktop

./: .gitignore  API_DOCUMENTATION.md  IMPLEMENTATION_DETAILS.md  LICENSE  README.md  README_CN.md  README_EN.md  TUNNEL_CONFIG_GUIDE.md  TUNNEL_INTEGRATION.md  TUNNEL_USAGE_EXAMPLES.md  TUNNEL_VERIFICATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test_node_path  test_node_path.rs
.codewhale/: instructions.md
.github/workflows/: build-template.yml  release.yml
.husky/: pre-commit
scripts/: sync-version.cjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: i18n.rs  lib.rs  main.rs
src-tauri/src/api/: cloudflared.rs  commands.rs  mod.rs  n8n_core.rs  tunnel.rs  utils.rs
src-tauri/src/api/cloudflared/: cache.rs  config.rs  download.rs  error.rs  install.rs  mod.rs  models.rs  path_resolver.rs  platform.rs
src-tauri/src/api/n8n/: constants.rs  error.rs  installer.rs  mod.rs  state.rs
src-tauri/src/api/tunnel/: commands.rs  config.rs  mod.rs  models.rs  n8n_integration.rs  runner.rs  state.rs  utils.rs
src-tauri/src/services/: downloader.rs  manager.rs  mod.rs
src/components/: SidebarPanel.tsx  TunnelManager.tsx
src/hooks/: useAutoSync.ts
src/i18n/: context.tsx  en.ts  index.ts  types.ts  zh.ts
