[package]
name = "n8n-desktop"
version = "0.1.0"
description = "Desktop application for n8n workflow automation"
authors = ["you"]
edition = "2021"

[lib]
name = "n8n_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
# 1. 核心库：使用原始版本
tauri = { version = "2.1.1", features = ["macos-private-api", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
serde_json = "1.0"

# 2. 插件：使用与主版本兼容的版本
tauri-plugin-shell = "2.1.0"
tauri-plugin-fs = "2.1.0"

# 3. 其他逻辑
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
futures-util = "0.3"
flate2 = "1.1.8"
tar = "0.4.44"
