[package]
name = "n8n-desktop"
version = "1.0.2"
description = "Desktop application for n8n workflow automation"
authors = ["you"]
edition = "2021"

[lib]
name = "n8n_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.clippy]
# 1. 先定义大组，优先级设为低（负数或 0）
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }

# 2. 再定义具体的强制项，优先级设为高
unwrap_used = { level = "deny", priority = 1 }

# 3. 针对你觉得太吵的逻辑进行精准降噪
missing_errors_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
# 解决你提到的 if-else 和 match 冲突
single_match = { level = "allow", priority = 1 }
[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }


[dependencies]
# 1. 核心库：使用原始版本
tauri = { version = "2.1.1", features = ["macos-private-api", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
serde_json = "1.0"

# 2. 插件：使用与主版本兼容的版本
tauri-plugin-shell = "2.1.0"
tauri-plugin-fs = "2.1.0"

# 3. 其他逻辑
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
futures-util = "0.3"
flate2 = "1.1.8"
tar = "0.4.44"
sha2 = "0.10"
regex = "1.10"
which = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
dirs = "5.0"
serde_yaml = "0.9"
