[package]
name = "n8n-desktop"
version = "1.0.4"
description = "Desktop application for n8n workflow automation"
authors = ["you"]
edition = "2021"

[lib]
name = "n8n_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
# 解决你提到的 if-else 和 match 冲突
single_match = { level = "allow", priority = 1 }

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }


[dependencies]
# 1. 核心库：使用原始版本
tauri = { version = "2.9.1", features = ["macos-private-api", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"

# 2. 插件：使用与主版本兼容的版本
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.3.5"

# 3. 其他逻辑
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
futures-util = "0.3"
flate2 = "1.1.8"
tar = "0.4.44"
sha2 = "0.10"
which = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
dirs = "5.0"
serde_yaml = "0.9"


[target.'cfg(windows)'.dependencies]
winreg = "0.52"
